--- a/index.html
+++ b/index.html
@@ -1,7 +1,482 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World...</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+<style type="text/css">body {
+    # background-color: rgb(131,201,183);
+    # background-color: rgb(17,81,49);
+  font-family: Roboto, sans-serif;
+  background: #2C3D51;
+  background: rgb(17,81,49);;
+  -webkit-font-smoothing: antialiased;
+    background-color: rgb(17,81,49);
+padding:0;
+}
+
+
+
+
+.container{
+  position:absolute;
+  height:200px;
+  width:200px;
+  left:800px;
+  top:230px;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+          transform: translateX(-50%) translateY(-50%);
+  -webkit-perspective:400px;
+          perspective:400px;
+}
+.container2{
+  position:absolute;
+  height:200px;
+  width:200px;
+  left:1000px;
+  top:320px;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+          transform: translateX(-50%) translateY(-50%);
+  -webkit-perspective:400px;
+          perspective:400px;
+}
+.cube{
+  height:100px;
+  width:100px;
+  -webkit-transform-origin:50% 50%;
+          transform-origin:50% 50%;
+  -webkit-transform-style:preserve-3d;
+          transform-style:preserve-3d;
+  -webkit-animation:rotate 3s infinite ease-in-out;
+          animation:rotate 3s infinite ease-in-out;
+
+}
+.cube2{
+  height:100px;
+  width:100px;
+  -webkit-transform-origin:50% 50%;
+          transform-origin:50% 50%;
+  -webkit-transform-style:preserve-3d;
+          transform-style:preserve-3d;
+  -webkit-animation:rotate 10s infinite ease-in-out;
+          animation:rotate 10s infinite ease-in-out;
+
+}
+.side{
+  position:absolute;
+  display:block;
+  height:100px;
+  width:100px;
+}
+.side1{
+  background:#41C3AC;
+  -webkit-transform:translateZ(50px);
+          transform:translateZ(50px);
+}
+.side2{
+  background:#0CC180;
+  -webkit-transform:rotateY(90deg) translateZ(50px);
+          transform:rotateY(90deg) translateZ(50px);
+}
+.side3{
+  background:#0A4327;
+  -webkit-transform:rotateY(180deg) translateZ(50px);
+          transform:rotateY(180deg) translateZ(50px);
+}
+.side4{
+  background:#65A26D;
+  -webkit-transform:rotateY(-90deg) translateZ(50px);
+          transform:rotateY(-90deg) translateZ(50px);
+}
+.side5{
+  background:#64D357;
+  -webkit-transform:rotateX(90deg) translateZ(50px);
+          transform:rotateX(90deg) translateZ(50px);
+}
+.side6{
+  background:#00C580;
+  -webkit-transform:rotateX(-90deg) translateZ(50px);
+          transform:rotateX(-90deg) translateZ(50px);
+}
+
+@-webkit-keyframes rotate{
+  0%{
+    -webkit-transform:rotateX(0deg) rotateY(0deg);
+  }
+}
+@keyframes rotate{
+  0%{
+    transform:rotateX(30deg) rotateY(00deg);
+  }
+  100%{
+    transform:rotateX(30deg) rotateY(360deg);
+  }
+}
+
+a{
+  font-family:helvetica;
+  color:#428bca;
+  text-align:center;
+  display:block;
+}
+
+
+
+
+
+
+
+
+h1 {
+  text-align: center;
+  margin-bottom: 50px;
+}
+h1 i {
+  color: pink;
+}
+
+
+
+
+
+
+
+
+#content {
+    background-color: rgb(17,81,49);
+}
+
+#table, caption, tbody, tfoot, thead, tr, th, td {
+ #   all: unset;
+#}
+
+.primary-links {
+  width: "0px";
+  height: "0px";
+}
+
+div { }
+.panel0 {
+background-image: url("http://192.171.139.42/sites/default/files/toolboxBackground.png");
+height: 300px;
+width:10%;height:10%;
+  font-size: 28px;
+  color: #FFF;
+  text-align: center;
+}
+
+div { }
+.panel1 {
+background-color: rgb(17,113,49);
+height: 400px;
+}
+
+div { }
+.panel2 {
+  font-size: 28px;
+  color: #FFF;
+  text-align: center;
+background-color: rgb(15,66,36);
+height: 400px;
+}
+
+
+div { }
+.panel2 {
+  font-size: 28px;
+  color: #FFF;
+  text-align: center;
+background-color: rgb(15,66,36);
+height: 400px;
+}
+
+div { }
+.panel3 {
+background-color: rgb(23,168,118);
+height: 400px;
+}
+
+div { }
+.panel4 {
+background-color: rgb(23,187,77);
+height: 400px;
+}
+
+table {
+  margin: 30;
+  padding: 50;
+  border: 10;
+  vertical-align: baseline;
+  horizontal-align: right;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+th, td {
+    padding: 25px;
+}
+
+.test {
+  background: url() no-repeat;
+  height:400px;
+  #position: relative;
+  #width:445px;
+  #margin-right: 20px;
+}
+
+.text {
+  box-sizing: border-box;
+  color:#fff;
+  font-size:18px;
+  font-weight:300;
+  font-family:"Open sans", sans-serif;
+  opacity:1.0;
+  #padding:100px 0px 100px 0px;
+  # max-width: 110px;
+  height: 100%;
+  width: 100%;
+  text-align:center;
+#  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.panelSegment {
+  #box-sizing: border-box;
+  color:#fff;
+  font-size:18px;
+  font-weight:300;
+  font-family:"Open sans", sans-serif;
+  #opacity:0.8;
+  #padding:100px 0px 300px 0px;
+  # max-width: 110px;
+  #height: 100%;
+  #width: 100%;
+  #text-align:center;
+  #text-transform: uppercase;
+  #display: flex;
+  #align-items: center;
+  #flex-direction: column;
+  #justify-content: center;
+}
+
+.panelSegmentBlack {
+  #box-sizing: border-box;
+  color:#000;
+  font-size:18px;
+  font-weight:300;
+  font-family:"Open sans", sans-serif;
+  #padding:100px 0px 100px 0px;
+}
+
+a {
+    color: hotpink;
+}
+
+.panelImage {
+}
+
+.read {
+  #border: 1px solid #fff;
+  border: 0px solid #fff;
+  font-size:16px;
+  padding: 10px 20px 7px 20px;
+  max-width: 110px;
+  margin: 30px auto;
+}
+.test:hover .text {
+  background:#2c3e50;
+  opacity:0.6;
+  -webkit-transition: all 1.2s ease-out;
+          transition: all 1.2s ease-out;
+}
+</style>
+<script>
+    document.getElementById("primary-menu").style.visibility = "hidden";
+    document.getElementById("secondary-menu").style.visibility = "hidden";
+
+    document.getElementById("primary-menu").style.display = "none";
+    document.getElementById("secondary-menu").style.display = "none";
+
+
+
+    var top1 = document.getElementsByClassName("title");
+    var top2 = document.getElementsByClassName("breadcrumb");
+    var top3 = document.getElementsByClassName("submitted");
+    var top4 = document.getElementsByClassName("taxonomy");
+
+
+
+    // x[0].style.backgroundColor = "red";
+    // y[0].style.backgroundColor = "red";
+
+top1[0].style.display = "none";
+top2[0].style.display = "none";
+top3[0].style.display = "none";
+top4[0].style.display = "none";
+
+    //document.getElementById("footer-message").style.style.display = "none";
+
+
+// document.getElementById("primary-menu").style.padding = "150px 110px 120px 130px";
+// document.getElementById("secondary-menu").style.padding = "150px 110px 120px 310px";
+// document.getElementById("footer-menu").style.padding = "150px 110px 120px 130px";
+
+// document.getElementById("primary-menu").style.maxHeight = "15px";
+// document.getElementById("secondary-menu").style.maxHeight = "15px";
+// document.getElementById("footer-menu").style.color = "red";
+
+// document.getElementById("primary-menu").style.height = "2250px";
+// document.getElementById("secondary-menu").style.height = "2250px";
+// document.getElementById("footer-menu").style.height = "5220px";
+
+    // document.getElementById("secondary-menu").style.visibility = "hidden";
+    // document.getElementById("footer-menu").style.visibility = "hidden";
+</script>
+<p>&nbsp;</p>
+
+<p><font size="0">&nbsp;</font></p>
+
+<p><font size="0"><img alt="ToolboxHeader" src="http://192.171.139.42/sites/default/files/toolboxBackground.png" style="width:100%;height:100%;margin-bottom:0px;border=0" /></font></p>
+
+<div class="container">
+<div class="cube">
+<div class="side side1">&nbsp;</div>
+
+<div class="side side2">&nbsp;</div>
+
+<div class="side side3">&nbsp;</div>
+
+<div class="side side4">&nbsp;</div>
+
+<div class="side side5">&nbsp;</div>
+
+<div class="side side6">&nbsp;</div>
+</div>
+</div>
+
+<div class="container2">
+<div class="cube2">
+<div class="side side1">&nbsp;</div>
+
+<div class="side side2">&nbsp;</div>
+
+<div class="side side3">&nbsp;</div>
+
+<div class="side side4">&nbsp;</div>
+
+<div class="side side5">&nbsp;</div>
+
+<div class="side side6">&nbsp;</div>
+</div>
+</div>
+
+<div class="panel2">
+<div class="test">
+<div class="text">
+<table cellpadding="50">
+	<tbody>
+		<tr>
+			<td align="center" width="50%">
+			<div class="panelSegment" style="width:50%;">Welcome to Cate, the Climate Analysis Toolbox for the ESA Climate Change Initiative.</div>
+			</td>
+			<td align="center" width="50%">
+			<div><img alt="cateLogo" src="http://192.171.139.42/sites/default/files/cateLogo.png" /></div>
+			</td>
+		</tr>
+	</tbody>
+</table>
+</div>
+</div>
+</div>
+
+<div class="panel3">
+<div class="test">
+<div class="text">
+<table cellpadding="50">
+	<tbody>
+		<tr>
+			<td align="center" width="50%">
+			<div class="panelSegmentBlack" style="width:50%;">Cate is a software environment for ingesting, operating on and visualising data from all ECV projects of the Climate Change Initiative. It does this by mashing the different types of ECV data into a Climate Data Model. Users then apply operations, including their own, to that data. Visualise them too.</div>
+			</td>
+			<td align="center" width="50%">
+			<div class="panelImage"><img src="http://192.171.139.42/sites/default/files/threeBlocks.png" /></div>
+			</td>
+		</tr>
+	</tbody>
+</table>
+</div>
+</div>
+</div>
+
+<div class="panel4">
+<div class="test">
+<div class="text">
+<table>
+	<tbody>
+		<tr>
+			<td align="center" width="50%">
+			<div class="panelSegment" style="width:50%;">Cate is Open Source and was first made available on Github in January 2016. We will be releasing Cate Version 1.0 (&quot;Offenbach&quot;) soon.</div>
+			</td>
+			<td align="center" width="50%">
+			<div><img alt="githubLogo" src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Logo.png" width="300" /></div>
+			</td>
+		</tr>
+	</tbody>
+</table>
+</div>
+</div>
+</div>
+
+<div class="panel2">
+<div class="test">
+<div class="text">
+<table>
+	<tbody>
+		<tr>
+			<td align="center" width="50%">
+			<div class="panelSegment" style="width:50%;">There are 3 ways to use Cate. A Graphical User Interface (GUI). A Command Line Interface (CLI). A Cate Python API. Find out more through our <a href="http://ect-core.readthedocs.io/en/latest/"> documentation</a>.</div>
+			</td>
+			<td align="center" width="50%">
+			<div><img src="http://192.171.139.42/sites/default/files/cli-2.png" width="300" /></div>
+			</td>
+		</tr>
+	</tbody>
+</table>
+</div>
+</div>
+</div>
+
+<div class="panel3">
+<div class="test">
+<div class="text">
+<table>
+	<tbody>
+		<tr>
+			<td align="center" width="50%">
+			<div class="panelSegment" style="width:50%;">We will be releasing training material to help you along the way. Including YouTube videos. Here is everything you need to know to <a href="http://ect-core.readthedocs.io/en/latest/">Getting Started</a>.</div>
+			</td>
+			<td align="center" width="50%">
+			<div><img src="http://192.171.139.42/sites/default/files/if_youtube_online_social_media_tube_734362.png" width="200" /></div>
+			</td>
+		</tr>
+	</tbody>
+</table>
+</div>
+</div>
+</div>
+
+<div class="panel4">
+<div class="test">
+<div class="text">
+<table>
+	<tbody>
+		<tr>
+			<td align="center" width="50%">
+			<div class="panelSegment" style="width:50%;">Cate is made for users, by users. We are here to help you and rely on your feedback. Learn more about our <a href="http://ect-core.readthedocs.io/en/latest/">Champion Users</a> and how we <a href="http://ect-core.readthedocs.io/en/latest/">support</a> you.</div>
+			</td>
+			<td align="center" width="50%">
+			<div><img alt="githubLogo" src="http://192.171.139.42/sites/default/files/pharmacy.png" width="200" /></div>
+			</td>
+		</tr>
+	</tbody>
+</table>
+</div>
+</div>
+</div>
