--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ top4[0].style.display = "none";
 	<tbody>
 		<tr>
 			<td align="center" width="50%">
-			<div class="panelSegment" style="width:50%;">Cate is Open Source and was first made available on Github in January 2016. We will be releasing Cate Version 1.0 (&quot;Offenbach&quot;) soon.</div>
+			<div class="panelSegment" style="width:50%;">Cate is Open Source and was first made available on Github in January 2016. We will be releasing Cate Version 1.0 soon.</div>
 			</td>
 			<td align="center" width="50%">
 			<div><img alt="githubLogo" src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Logo.png" width="300" /></div>
