--- a/index.html
+++ b/index.html
@@ -335,6 +335,38 @@ top4[0].style.display = "none";
 
 <p><font size="0"><img alt="ToolboxHeader" src="http://192.171.139.42/sites/default/files/toolboxBackground.png" style="width:100%;height:100%;margin-bottom:0px;border=0" /></font></p>
 
+<div class="container">
+<div class="cube">
+<div class="side side1">&nbsp;</div>
+
+<div class="side side2">&nbsp;</div>
+
+<div class="side side3">&nbsp;</div>
+
+<div class="side side4">&nbsp;</div>
+
+<div class="side side5">&nbsp;</div>
+
+<div class="side side6">&nbsp;</div>
+</div>
+</div>
+
+<div class="container2">
+<div class="cube2">
+<div class="side side1">&nbsp;</div>
+
+<div class="side side2">&nbsp;</div>
+
+<div class="side side3">&nbsp;</div>
+
+<div class="side side4">&nbsp;</div>
+
+<div class="side side5">&nbsp;</div>
+
+<div class="side side6">&nbsp;</div>
+</div>
+</div>
+
 <div class="panel2">
 <div class="test">
 <div class="text">
@@ -380,7 +412,7 @@ top4[0].style.display = "none";
 	<tbody>
 		<tr>
 			<td align="center" width="50%">
-			<div class="panelSegment" style="width:50%;">Cate is Open Source and was first made available on Github in January 2016. We will be releasing Cate Version 1.0 soon.</div>
+			<div class="panelSegment" style="width:50%;">Cate is Open Source and was first made available on Github in January 2016. We will be releasing Cate Version 1.0 (&quot;Offenbach&quot;) soon.</div>
 			</td>
 			<td align="center" width="50%">
 			<div><img alt="githubLogo" src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Logo.png" width="300" /></div>
