--- a/index.html
+++ b/index.html
@@ -311,29 +311,13 @@ top2[0].style.display = "none";
 top3[0].style.display = "none";
 top4[0].style.display = "none";
 
-    //document.getElementById("footer-message").style.style.display = "none";
-
-
-// document.getElementById("primary-menu").style.padding = "150px 110px 120px 130px";
-// document.getElementById("secondary-menu").style.padding = "150px 110px 120px 310px";
-// document.getElementById("footer-menu").style.padding = "150px 110px 120px 130px";
-
-// document.getElementById("primary-menu").style.maxHeight = "15px";
-// document.getElementById("secondary-menu").style.maxHeight = "15px";
-// document.getElementById("footer-menu").style.color = "red";
-
-// document.getElementById("primary-menu").style.height = "2250px";
-// document.getElementById("secondary-menu").style.height = "2250px";
-// document.getElementById("footer-menu").style.height = "5220px";
-
-    // document.getElementById("secondary-menu").style.visibility = "hidden";
-    // document.getElementById("footer-menu").style.visibility = "hidden";
 </script>
 <p>&nbsp;</p>
 
 <p><font size="0">&nbsp;</font></p>
 
-<p><font size="0"><img alt="ToolboxHeader" src="http://192.171.139.42/sites/default/files/toolboxBackground.png" style="width:100%;height:100%;margin-bottom:0px;border=0" /></font></p>
+<p><font size="0">
+  <img alt="ToolboxHeader" src="http://192.171.139.42/sites/default/files/toolboxBackground.png" style="width:100%;margin-bottom:0px;border=0" /></font></p>
 
 <div class="container">
 <div class="cube">
