--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ top4[0].style.display = "none";
 <p><font size="0">&nbsp;</font></p>
 
 <p><font size="0">
-  <img alt="ToolboxHeader" src="http://192.171.139.42/sites/default/files/toolboxBackground.png" style="width:100%;margin-bottom:0px;border=0" /></font></p>
+  <img alt="ToolboxHeader" src="http://192.171.139.42/sites/default/files/toolboxBackground.png" style="width:10%;height:10%;margin-bottom:0px;border=0" /></font></p>
 
 <div class="container">
 <div class="cube">
