--- a/index.html
+++ b/index.html
@@ -272,6 +272,14 @@ a {
 .panelImage {
 }
 
+img {
+  display: block;
+  max-width:230px;
+  max-height:95px;
+  width: auto;
+  height: auto;
+}
+
 .read {
   #border: 1px solid #fff;
   border: 0px solid #fff;
@@ -317,7 +325,7 @@ top4[0].style.display = "none";
 <p><font size="0">&nbsp;</font></p>
 
 <p><font size="0">
-  <img alt="ToolboxHeader" src="http://192.171.139.42/sites/default/files/toolboxBackground.png" style="width:10%;height:10%;margin-bottom:0px;border=0" /></font></p>
+  <img alt="ToolboxHeader" src="http://192.171.139.42/sites/default/files/toolboxBackground.png" style="width:40%;height:40%;margin-bottom:0px;border=0" /></font></p>
 
 <div class="container">
 <div class="cube">
