--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>.</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -31,7 +31,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">[-]</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -57,10 +57,10 @@
     <header class="masthead">
       <div class="header-content">
         <div class="header-content-inner">
-          <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+          <h1 id="homeHeading">!</h1>
           <hr>
-          <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+          <p>@</p>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">#</a>
         </div>
       </div>
     </header>
@@ -69,10 +69,27 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">We've got what you need!</h2>
+            <h2 class="section-heading text-white">
+            Welcome to Cate, the Climate Analysis Toolbox for the ESA Climate Change Initiative.
+            </h2>
             <hr class="light">
-            <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-            <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+            <p class="text-faded">!</p>
+            <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">@</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="bg-primary" id="about2">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto text-center">
+            <h2 class="section-heading text-white">
+            Cate is a software environment for ingesting, operating on and visualising data from all ECV projects of the Climate Change Initiative. It does this by mashing the different types of ECV data into a Climate Data Model. Users then apply operations, including their own, to that data. Visualise them too.
+            </h2>
+            <hr class="light">
+            <p class="text-faded">!</p>
+            <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">@</a>
           </div>
         </div>
       </div>
