--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     <header class="masthead">
       <div class="header-content">
         <div class="header-content-inner">
-          <h1 id="homeHeading">!</h1>
+          <h1 id="homeHeading">CCI Toolbox</h1>
           <hr>
-          <p>@</p>
+          <p>Welcome to Cate, the Climate Analysis Toolbox for the ESA Climate Change Initiative (CCI).</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">#</a>
         </div>
       </div>
