--- a/index.html
+++ b/index.html
@@ -58,22 +58,26 @@
       <div class="header-content">
         <div class="header-content-inner">
           <h1 id="homeHeading">CCI Toolbox</h1>
-          <p></p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">#</a>
+          <p>.</p>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">.</a>
         </div>
       </div>
     </header>
 
-    <section class="bg-primary" id="about">
-      <div class="container">
+    <section class="bg-success" id="about">
+      <div class="container" style="background-color:pink;height:300px">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">
             Welcome to Cate, the Climate Analysis Toolbox for the ESA Climate Change Initiative.
             </h2>
-            <hr class="light">
-            <p class="text-faded">!</p>
+            <p class="text-faded"></p>
             <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">@</a>
+          </div>
+          <div class="col-lg-4 mx-auto text-center">
+            <h2 class="section-heading text-white">
+            !!!
+            </h2>
           </div>
         </div>
       </div>
@@ -84,7 +88,13 @@
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">
-            Cate is a software environment for ingesting, operating on and visualising data from all ECV projects of the Climate Change Initiative. It does this by mashing the different types of ECV data into a Climate Data Model. Users then apply operations, including their own, to that data. Visualise them too.
+            Cate is a software environment for ingesting, operating on and visualising data from all ECV projects of the Climate Change Initiative (CCI).
+
+            It does this by mashing the different types of ECV data into a Climate Data Model.
+
+            Users then apply operations, including their own, to that data.
+
+            Visualise them too.
             </h2>
             <hr class="light">
             <p class="text-faded">!</p>
