--- a/index.html
+++ b/index.html
@@ -58,18 +58,18 @@
       <div class="header-content">
         <div class="header-content-inner">
           <h1 id="homeHeading">CCI Toolbox</h1>
-          <p>.</p>
+          <p>Welcome to Cate, the Climate Analysis Toolbox for the ESA Climate Change Initiative.</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">.</a>
         </div>
       </div>
     </header>
 
-    <section class="bg-success" id="about">
-      <div class="container" style="background-color:pink;height:300px">
+    <section class="bg-success" style="background-color: #aaaaaa !important" id="about">
+      <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">
-            Welcome to Cate, the Climate Analysis Toolbox for the ESA Climate Change Initiative.
+            Cate is a software environment for ingesting, operating on and visualising data from all ECV projects of the Climate Change Initiative (CCI).
             </h2>
             <p class="text-faded"></p>
             <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">@</a>
@@ -83,22 +83,65 @@
       </div>
     </section>
 
-    <section class="bg-primary" id="about2">
+    <section class="bg-success" style="background-color: #bbbbbb !important" id="about">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">
-            Cate is a software environment for ingesting, operating on and visualising data from all ECV projects of the Climate Change Initiative (CCI).
-
-            It does this by mashing the different types of ECV data into a Climate Data Model.
-
-            Users then apply operations, including their own, to that data.
-
-            Visualise them too.
-            </h2>
-            <hr class="light">
-            <p class="text-faded">!</p>
+            Cate works by mashing all the different types of ECV data into a Common Data Model.
+            <p class="text-faded"></p>
             <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">@</a>
+          </div>
+          <div class="col-lg-4 mx-auto text-center">
+            <h2 class="section-heading text-white">
+            !!!
+            </h2>
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-lg-8 mx-auto text-center">
+            <h2 class="section-heading text-white">
+            Users then apply operations, including their own, to that Common Data Model.
+            <p class="text-faded"></p>
+            <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">@</a>
+          </div>
+          <div class="col-lg-4 mx-auto text-center">
+            <h2 class="section-heading text-white">
+            !!!
+            </h2>
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-lg-8 mx-auto text-center">
+            <h2 class="section-heading text-white">
+            Visualise them too.
+            <p class="text-faded"></p>
+            <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">@</a>
+          </div>
+          <div class="col-lg-4 mx-auto text-center">
+            <h2 class="section-heading text-white">
+            !!!
+            </h2>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="bg-success" style="background-color: #aaaaaa !important" id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto text-center">
+            <h2 class="section-heading text-white">
+            Cate is Open Source and was first made available on Github in January 2016. We will be releasing Cate Version 1.0 soon.
+            <p class="text-faded"></p>
+            <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">@</a>
+          </div>
+          <div class="col-lg-4 mx-auto text-center">
+            <h2 class="section-heading text-white">
+            !!!
+            </h2>
           </div>
         </div>
       </div>
@@ -108,44 +151,91 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">At Your Service</h2>
+            <h2 class="section-heading">There are three ways to use Cate.</h2>
             <hr class="primary">
           </div>
         </div>
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-lg-3 col-md-6 text-center">
+          <div class="col-md-4 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-              <h3>Sturdy Templates</h3>
+              <h3>A Command Line Interface</h3>
               <p class="text-muted">Our templates are updated regularly so they don't break.</p>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 text-center">
+          <div class="col-md-4 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-              <h3>Ready to Ship</h3>
+              <h3>A Graphical User Interface</h3>
               <p class="text-muted">You can use this theme as is, or you can make changes!</p>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 text-center">
+          <div class="col-md-4 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-              <h3>Up to Date</h3>
+              <h3>A Cate Python API</h3>
               <p class="text-muted">We update dependencies to keep things fresh.</p>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 text-center">
-            <div class="service-box">
-              <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-              <h3>Made with Love</h3>
-              <p class="text-muted">You have to make your websites with love these days!</p>
             </div>
           </div>
         </div>
       </div>
     </section>
+
+    <section class="bg-success" style="background-color: #aaaaaa !important" id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto text-center">
+            <h2 class="section-heading text-white">
+              We will be releasing training material to help you along the way. Including YouTube videos. Here is everything you need to know to
+              Getting Started
+            <p class="text-faded"></p>
+            <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">@</a>
+          </div>
+          <div class="col-lg-4 mx-auto text-center">
+            <h2 class="section-heading text-white">
+            !!!
+            </h2>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="bg-success" style="background-color: #aaaaaa !important" id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 mx-auto text-center">
+            <h2 class="section-heading text-white">
+            !!!
+            </h2>
+          </div>
+          <div class="col-lg-8 mx-auto text-center">
+            <h2 class="section-heading text-white">
+Cate is made for users, by users. We are here to help you and rely on your feedback. Learn more about our Champion Users and how we support you.
+            <p class="text-faded"></p>
+            <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">@</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="bg-success" style="background-color: #aaaaaa !important" id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 mx-auto text-center">
+            <h2 class="section-heading text-white">
+Made in Germany. And Switzerland. And The Netherlands. And The United Kingdom.
+Cate is built through international cooperation, across both science and industry, and funded by the European Space Agency (ESA).
+Find out more about the team here. <p class="text-faded"></p>
+            <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">@</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+
 
     <section class="p-0" id="portfolio">
       <div class="container-fluid">
@@ -255,17 +345,13 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading">Let's Get In Touch!</h2>
+            <h2 class="section-heading">Let's Get In Touch</h2>
             <hr class="primary">
-            <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+            <p>Let us know how we can support you. Do get in touch with any requests, questions and feedback you have.</p>
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4 ml-auto text-center">
-            <i class="fa fa-phone fa-3x sr-contact"></i>
-            <p>123-456-6789</p>
-          </div>
-          <div class="col-lg-4 mr-auto text-center">
+          <div class="col-lg-12 mr-auto text-center">
             <i class="fa fa-envelope-o fa-3x sr-contact"></i>
             <p>
               <a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a>
