--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
               <h1 class="mb-5">
                 <div style="color:#ffffff">CCI Toolbox</div>
                 <div style="color:#F4B12A">
-                Welcome to Cate, the Climate Analysis Toolbox for the ESA Climate Change Initiative.
+                Welcome to Cate.<br>The Climate Analysis Toolbox of the ESA Climate Change Initiative.
                 </div>
                 </h1>
               <a href="#about" class="btn btn-outline btn-xl js-scroll-trigger">About</a>
@@ -1071,7 +1071,7 @@ First follow the download instructions below, then let's talk about
       <div class="container">
         <div class="row">
           <div class="col-md-8">
-            <h2>Now use our documentation.<br>From how to get started.<br>To everything else.<br></h2>
+            <h2>Use our documentation.<br>From how to get started.<br>To everything else.<br></h2>
               <p style="color:#F4B12A">
               </p>
             <p style="color:#FFCCCC">
@@ -1163,7 +1163,7 @@ We'll then take it from there, and keep you updated.
               To address your needs.<br>
             </h2>
             <p class="text-muted">
-We develop Cate by using Agile methodologies, <br> and working side by side with users.<br>
+We develop Cate by using Agile methodologies, <br> working side by side with users.<br>
 This enables us to quickly respond to user needs. <br>
 So do please give us your feedback via <br>the
 <a href="https://github.com/CCI-Tools/cate/issues">Cate Issue Tracker</a>.
@@ -1197,7 +1197,7 @@ We're listening.
               Made in Germany. <br>( And Switzerland ) <br>[ And The Netherlands ] <br>{ And The United Kingdom }
             </h2>
   <p class="text-muted">
-    Cate is built through international cooperation, across both science and industry,
+    Cate is built through international cooperation, across science and industry,
     and is supported by the <a href="http://www.esa.int/">European Space Agency (ESA)</a>.
     <!--The partners comprise
     <a href="http://www.brockmann-consult.de/">Brockmann Consult</a> (Lead Partner),
