--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@ this is what Cate calls a resource.
 
               <p style="color:#FFCCCC">
 Whether you're on Mac, Windows or Linux, how you use Cate is pretty much the same.
-First follow the download instructions below, then let's talk about
+Follow the Github download instructions below, then let's talk about
 <a class="js-scroll-trigger" href="#support">documentation</a>.
 </p>
 
