--- a/index.html
+++ b/index.html
@@ -1141,7 +1141,7 @@ We're listening.
           </div>
                     <div class="col-md-8">
             <h2>
-              Made in Germany. <br>( And Switzerland ) <br>[ And The Netherlands ] <br>{ And The United Kingdom }
+              Made in Germany. <br>( And Norway ) <br>[ And Switzerland ] <br>{ And The United Kingdom }
             </h2>
   <p class="text-muted">
     Cate is built through international cooperation, across science and industry,
