--- a/index.html
+++ b/index.html
@@ -1048,7 +1048,7 @@ Follow the Github download instructions below, then let's talk about
 
 
 
-    <section class="contact" id="support" style="color:#ffffff;background-color:#BE2454">
+    <section class="contact" style="color:#ffffff;background-color:#BE2454">
       <div class="container">
         <div class="row">
           <div class="col-md-8">
