Changing Cate to CCI Toolbox

--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
               <h1 class="mb-5">
                 <div style="color:#ffffff">CCI Toolbox</div>
                 <div style="color:#F4B12A">
-                Welcome to Cate.<br>The Climate Analysis Toolbox of the ESA Climate Change Initiative.
+                The Climate Analysis Toolbox of the ESA Climate Change Initiative.
                 </div>
                 </h1>
               <a href="#about" class="btn btn-outline btn-xl js-scroll-trigger">About</a>
@@ -858,9 +858,9 @@
       <div class="container">
         <div class="row">
           <div class="col-md-10 mx-auto">
-            <h2>Cate is a software environment for ingesting, operating on and visualising all ESA Climate Change Initiative data.</h2>
+            <h2>The CCI Toolbox is a software environment for ingesting, operating on and visualising all ESA Climate Change Initiative data.</h2>
 <p class="text-muted">
-  Cate works by mashing ECV data into a Common Data Model.
+  The toolbox works by mashing ECV data into a Common Data Model.
   <br>Users operate on this model, <br>then visualise the results.
 </p>
 
@@ -874,7 +874,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 my-auto text-center">
-          <h2>Cate Interfaces</h2>
+          <h2>CCI Toolbox Interfaces</h2>
           </div>
         </div>
         <div class="row">
@@ -903,8 +903,8 @@
                     <img src="img/Python-icon.png" width="170" style="padding:10px")>
                     <h3>A Python API.</h3>
                     <p class="text-muted">
-                    The Cate Python API allows you to use Cate in your own Python programs,
-                    and make up new functions for Cate too.</p>
+                    The Python API allows you to use the CCI Toolbox in your own Python programs,
+                    and make up new functions for the toolbox too.</p>
                   </div>
                 </div>
             </div>
@@ -922,11 +922,11 @@
             <div class="col-md-10 mx-auto">
               <h2>The Graphical User Interface</h2>
   <p class="text-muted">
-The basic idea of Cate Desktop is to allow access all remote <br>CCI data sources a
-nd calling all Cate operations
+The basic idea of CCI Toolbox Desktop is to allow access all remote <br>CCI data sources and
+calling all toolbox operations
 through a consistent interface. <br>The results of opening a data source or applying an operations is usually
 <br>an in-memory dataset representation -
-this is what Cate calls a resource.
+this is what the toolbox calls a resource.
   </p>
   <br>
 
@@ -978,12 +978,12 @@ this is what Cate calls a resource.
       <div class="container">
         <div class="row">
           <div class="col-md-8">
-            <h2>Cate is Open Source.<br>
+            <h2>The CCI Toolbox is Open Source.<br>
               Version 1.0 is now available.<br>Includes installers for <br>Windows, Linux & Mac.</h2>
               <br>
 
               <p style="color:#FFCCCC">
-Whether you're on Mac, Windows or Linux, how you use Cate is pretty much the same.
+Whether you're on Mac, Windows or Linux, how you use the toolbox is pretty much the same.
 Follow the Github download instructions below, then let's talk about
 <a class="js-scroll-trigger" href="#support">documentation</a>.
 </p>
@@ -997,12 +997,12 @@ Follow the Github download instructions below, then let's talk about
             	<li>
             		<div class="direction-r">
             			<div class="flag-wrapper">
-            				<span class="flag">Download Cate</span>
+            				<span class="flag">Download CCI Toolbox</span>
             				<span class="time-wrapper"><span class="time">On Github</span></span>
             			</div>
-            			<div class="desc">Go to the Cate <a href="https://github.com/CCI-Tools/cate/releases">releases</a> page
-                    on Github. The latest Cate release will be at the top.
-                    Download both Cate Core and Cate Desktop.</div>
+            			<div class="desc">Go to the CCI Toolbox <a href="https://github.com/CCI-Tools/cate/releases">releases</a> page
+                    on Github. The latest toolbox release will be at the top.
+                    Download both the Climate Analysis Toolbox for ESA (Cate) Core and the Cate Desktop.</div>
             		</div>
             	</li>
 
@@ -1065,9 +1065,9 @@ The <a href="http://ect-core.readthedocs.io/en/latest/user_manual.html">User Man
   each of the user interfaces, plus details of the
 available <a href="http://ect-core.readthedocs.io/en/latest/op_specs.html">Operations</a>.
 
-You can add operations to Cate through the <a href="http://ect-core.readthedocs.io/en/latest/api_reference.html">API</a>.
+You can add operations to the CCI Toolbox through the <a href="http://ect-core.readthedocs.io/en/latest/api_reference.html">API</a>.
   Other technical information
-includes <a href="http://ect-core.readthedocs.io/en/latest/architecture.html">Cate
+includes <a href="http://ect-core.readthedocs.io/en/latest/architecture.html">CCI Toolbox
   Architecture</a>, <a href="http://ect-core.readthedocs.io/en/latest/developer_guide.html">Developer
     Guide</a> and <a href="http://ect-core.readthedocs.io/en/latest/detailed_design.html">Detailed Design</a>.
 We'll have YouTube training videos for you soon. <br>But not yet. We're still working on those.
@@ -1089,11 +1089,11 @@ We'll have YouTube training videos for you soon. <br>But not yet. We're still wo
         <div class="row">
           <div class="col-md-8">
             <h2>
-              Cate is made for users, by users. <br>We are happy to support you.
+              Made for users, by users. <br>We are happy to support you.
             </h2>
             <p class="text-muted">
-Please post any support requests, bug reports, <br> or feature requests in the
-<a href="https://github.com/CCI-Tools/cate/issues">Cate Issue Tracker</a>.<br>
+Please post any support requests, bug reports, <br> or feature requests in the toolbox
+<a href="https://github.com/CCI-Tools/cate/issues">Issue Tracker</a>.<br>
 We'll then take it from there, and keep you updated.
   </p>
 
@@ -1115,10 +1115,10 @@ We'll then take it from there, and keep you updated.
               To address your needs.<br>
             </h2>
             <p class="text-muted">
-We develop Cate by using Agile methodologies, <br> working side by side with users.<br>
+We develop the CCI Toolbox by using Agile methodologies, <br> working side by side with users.<br>
 This enables us to quickly respond to user needs. <br>
-So do please give us your feedback via <br>the
-<a href="https://github.com/CCI-Tools/cate/issues">Cate Issue Tracker</a>.
+So do please give us your feedback via <br>the toolbox
+<a href="https://github.com/CCI-Tools/cate/issues">Issue Tracker</a>.
 We're listening.
   </p>
 
@@ -1144,7 +1144,7 @@ We're listening.
               Made in Germany. <br>( And Norway ) <br>[ And Switzerland ] <br>{ And The United Kingdom }
             </h2>
   <p class="text-muted">
-    Cate is built through international cooperation, across science and industry,
+    The CCI Toolbox is built through international cooperation, across science and industry,
     and is supported by the <a href="http://www.esa.int/">European Space Agency (ESA)</a>.
     <!--The partners comprise
     <a href="http://www.brockmann-consult.de/">Brockmann Consult</a> (Lead Partner),
