--- a/index.html
+++ b/index.html
@@ -1125,7 +1125,7 @@ We're listening.
 
           </div>
           <div class="col-md-4">
-              <img alt="githubLogo" src="img/if_icon-83_667357.png" width="200" />
+              <img alt="githubLogo" src="img/if_conversation_512533.png" width="230" />
           </div>
         </div>
       </div>
@@ -1141,10 +1141,12 @@ We're listening.
           </div>
                     <div class="col-md-8">
             <h2>
-              Made in Germany. <br>( And Norway ) <br>[ And Switzerland ] <br>{ And The United Kingdom }
+              International cooperation<br>
+              Across science & industry.
             </h2>
   <p class="text-muted">
-    The CCI Toolbox is built through international cooperation, across science and industry,
+    Made in Germany ( And Norway ) [ And Switzerland ] { And The United Kingdom }.<br>
+    The CCI Toolbox is built through international cooperation, across science <br>and industry,
     and is supported by the <a href="http://www.esa.int/">European Space Agency (ESA)</a>.
     <!--The partners comprise
     <a href="http://www.brockmann-consult.de/">Brockmann Consult</a> (Lead Partner),
@@ -1187,8 +1189,9 @@ We're listening.
   <a style="color:#aaaaaa" href="http://cci.esa.int/">Climate Change Initiative (CCI)</a>.
   The CCI Toolbox has been produced by
   Carsten Brockmann (Science Lead), Norman Fomferra (Technical Lead), Anna Corlyon (Project Manager),
-  Tom Block, Marco Zühlke, Janis Gailis, Dag Evensberget, Krzysztof Bernat, Rainer Hollmann, Petra Fuchs, Luzia Keupp, Chris Merchant,
-  Stephan Herzog, Kevin Pearson, Frank Paul, Ed Pechorro (ESA Technical Manager), Simon Pinnock (ESA Technical Officer).
+  Tom Block, Marco Zühlke, Janis Gailis, Dag Evensberget, Krzysztof Bernat, Rainer Hollmann, Stephan Herzog,
+  Petra Fuchs, Luzia Keupp, Chris Merchant,
+  Kevin Pearson, Frank Paul, Fay Done, Helen Clifton, Ed Pechorro (ESA Technical Manager), Simon Pinnock (ESA Technical Officer).
 </p><br>
       </div>
 
