--- a/index.html
+++ b/index.html
@@ -803,6 +803,18 @@
           background: #FFAB91;
         }
 
+
+        #background {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            left: 0px;
+            top: 0px;
+            z-index: 0;
+        }
+
+.stretch { min-width:100%; min-height:100%; width:auto; height:auto; }
+
     </style>
 
   </head>
@@ -835,6 +847,68 @@
       </div>
     </nav>
 
+<!--
+    <section class="contact bg-primary text-center" id="about">
+      <div class="container">
+        <div class="row">
+
+          <div>
+            <div>
+              <div id="background">
+                <img src="img/header.jpg" class="stretch"/>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    min-width:80%; min-height:80%; width:auto; height:auto;width: 80%;height: 80%;position: absolute;">
+
+-->
+
+    <section class="contact bg-primary text-center" id="home" style="background-image:url('img/header.jpg');height:800px">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-left">
+            <div class="header-content">
+
+                <br><br><br><br><br><br>
+                <div class="header-content" style="color:#ffffff"><h1 class="mb-5">CCI Toolbox<br>
+                <div style="color:#F4B12A">
+                The Climate Analysis Toolbox of the <br>ESA Climate Change Initiative.</h1>
+                </div>
+              <a href="#about" class="btn btn-outline btn-xl js-scroll-trigger">About</a>
+            </div>
+          </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+
+<!--
+
+<a href="#about" class="btn btn-outline btn-xl js-scroll-trigger">About</a>
+    <div class="header-content mx-auto">
+      <h1 class="mb-5">
+        <div style="color:#ffffff">CCI Toolbox</div>
+        <div style="color:#F4B12A">
+        The Climate Analysis Toolbox of the ESA Climate Change Initiative.
+        </div>
+        </h1>
+      <a href="#about" class="btn btn-outline btn-xl js-scroll-trigger">About</a>
+    </div>
+
+
+  </div>
+</div>
+
+-->
+
+<!--
       <div class="contact h-100" id="home">
         <div class="row h-100" style="background-image:url('img/header.jpg');">
           <div class="col-lg-1">
@@ -853,6 +927,7 @@
           </div>
         </div>
       </div>
+-->
 
     <section class="contact bg-primary text-center" id="about">
       <div class="container">
@@ -929,14 +1004,8 @@ through a consistent interface. <br>The results of opening a data source or appl
 this is what the toolbox calls a resource.
   </p>
   <br>
-
             </div>
           </div>
-
-
-
-
-
 
       <div class="row">
 
