--- a/index.html
+++ b/index.html
@@ -1184,10 +1184,13 @@ We'll then take it from there, and keep you updated.
               To address your needs.<br>
             </h2>
             <p class="text-muted">
-We develop the CCI Toolbox by using Agile methodologies, <br> working side by side with users.<br>
-This enables us to quickly respond to user needs. <br>
-So do please give us your feedback via <br>the toolbox
-<a href="https://github.com/CCI-Tools/cate/issues">Issue Tracker</a>.
+We develop the CCI Toolbox by using Agile methodologies, <br> working side by side with users.
+This enables us to <br>quickly respond to user needs. Let us know what you think
+<br> via the toolbox
+<a href="https://github.com/CCI-Tools/cate/issues">Issue Tracker</a> or drop us an <br>email at
+
+<a href="mailto:climate.office@esa.int?Subject=CCI%20Toolbox%20Feedback" target="_top">
+  climate.office@esa.int</a>.
 We're listening.
   </p>
 
