--- a/index.html
+++ b/index.html
@@ -1189,11 +1189,10 @@ This enables us to <br>quickly respond to user needs. Let us know what you think
 <br> via the toolbox
 <a href="https://github.com/CCI-Tools/cate/issues">Issue Tracker</a> or drop us an <br>email at
 
-<a href="mailto:climate.office@esa.int?Subject=CCI%20Toolbox%20Feedback" target="_top">
+<a href="mailto:climate.office@esa.int?cc=team@ccitools.org?subject=CCI%20Toolbox%20Feedback" target="_top">
   climate.office@esa.int</a>.
 We're listening.
   </p>
-
 
           </div>
           <div class="col-md-4">
