--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@
             <h2>The CCI Toolbox is a software environment for ingesting, operating on and visualising all ESA Climate Change Initiative data.</h2>
 <p class="text-muted">
   The toolbox works by mashing ECV data into a Common Data Model.
-  <br>Users operate on this model, <br>then visualise the results.
+  <br>Users operate on this model, then visualise the results.
 </p>
 
           </div>
@@ -997,11 +997,9 @@
             <div class="col-md-10 mx-auto">
               <h2>The Graphical User Interface</h2>
   <p class="text-muted">
-The basic idea of CCI Toolbox Desktop is to allow access all remote <br>CCI data sources and
-calling all toolbox operations
-through a consistent interface. <br>The results of opening a data source or applying an operations is usually
-<br>an in-memory dataset representation -
-this is what the toolbox calls a resource.
+The CCI Toolbox graphical desktop provides access to remote CCI data sources and a suite of operations to act on
+the data This typically results in an in-memory means of holding the data, which we call a 'resource'. The desktop also
+provides a means to visualise the data under analysis.
   </p>
   <br>
             </div>
