--- a/index.html
+++ b/index.html
@@ -1210,7 +1210,7 @@ We're listening.
           </div>
                     <div class="col-md-8">
             <h2>
-              International cooperation<br>
+              International cooperation.<br>
               Across science & industry.
             </h2>
   <p class="text-muted">
