--- a/index.html
+++ b/index.html
@@ -1183,7 +1183,7 @@ We'll then take it from there, and keep you updated.
             </h2>
             <p class="text-muted">
 We develop the CCI Toolbox by using Agile methodologies, <br> working side by side with users.
-This enables us to <br>quickly respond to user needs. Let us know what you think
+This enables us to <br>quickly respond to your needs. Let us know what you think
 <br> via the toolbox
 <a href="https://github.com/CCI-Tools/cate/issues">Issue Tracker</a> or drop us an <br>email at
 
