--- a/index.html
+++ b/index.html
@@ -874,12 +874,12 @@
           <div class="col-lg-12 text-left">
             <div class="header-content">
 
-                <br><br><br><br><br><br>
+                <br><br><br><br><br><br><br><br><br>
                 <div class="header-content" style="color:#ffffff"><h1 class="mb-5">CCI Toolbox<br>
                 <div style="color:#F4B12A">
                 The Climate Analysis Toolbox of the <br>ESA Climate Change Initiative.</h1>
                 </div>
-              <a href="#about" class="btn btn-outline btn-xl js-scroll-trigger">About</a>
+            <!--  <a href="#about" class="btn btn-outline btn-xs js-scroll-trigger">About</a> -->
             </div>
           </div>
           </div>
