--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@
                 <div class="col-lg-4">
                   <div class="feature-item">
                     <img src="img/Python-icon.png" width="170" style="padding:10px")>
-                    <h3>A Python API.</h3>
+                    <h3>A Python API</h3>
                     <p class="text-muted">
                     The Python API allows you to use the CCI Toolbox in your own Python programs,
                     and make up new functions for the toolbox too.</p>
