--- a/index.html
+++ b/index.html
@@ -1050,8 +1050,8 @@ provides a means to visualise the data under analysis.
               <br>
 
               <p style="color:#FFCCCC">
-Whether you're on Mac, Windows or Linux, how you use the toolbox is pretty much the same.
-Follow the Github download instructions below, then let's talk about
+Whether you're on Mac, Windows or Linux, how you use the <br>toolbox is pretty much the same.
+Follow the Github download<br> instructions below, then let's talk about
 <a class="js-scroll-trigger" href="#support">documentation</a>.
 </p>
 
