--- a/index.html
+++ b/index.html
@@ -1052,7 +1052,7 @@ provides a means to visualise the data under analysis.
               <p style="color:#FFCCCC">
 Whether you're on Mac, Windows or Linux, how you use the <br>toolbox is pretty much the same.
 Follow the Github download<br> instructions below, then let's talk about
-<a class="js-scroll-trigger" href="#support">documentation</a>.
+<a class="js-scroll-trigger" href="#documentation">documentation</a>.
 </p>
 
 
@@ -1115,7 +1115,7 @@ Follow the Github download<br> instructions below, then let's talk about
 
 
 
-    <section class="contact" style="color:#ffffff;background-color:#BE2454">
+    <section class="contact" id="documentation" style="color:#ffffff;background-color:#BE2454">
       <div class="container">
         <div class="row">
           <div class="col-md-8">
