--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     gtag('config', 'UA-107847917-1');
   </script>
 
+  <link rel="shortcut icon" type="image/x-icon" href="cci-toolbox-favicon.png" />
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
