data type and number

--- a/UseCase1.html
+++ b/UseCase1.html
@@ -1064,36 +1064,11 @@
               includes <a href="http://ect-core.readthedocs.io/en/latest/architecture.html">CCI Toolbox
               Architecture</a>, <a href="http://ect-core.readthedocs.io/en/latest/developer_guide.html">Developer
               Guide</a> and <a href="http://ect-core.readthedocs.io/en/latest/detailed_design.html">Detailed Design</a>.
-              We'll have YouTube training videos for you soon. But not yet. We're still working on those.
+              We'll have YouTube training videos for you soon. <br>But not yet. We're still working on those.
             </p>
           </div>
           <div class="col-md-4">
               <img alt="githubLogo" src="img/document.png" width="230" />
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="contact" id="documentation" style="color:#ffffff;background-color:#CB3E68">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8">
-            <h2>Data in CCI Toolbox v1.0<br></h2>
-            <p style="color:#F4B12A"></p>
-            <p style="color:#FFCCCC">
-              The latest toolbox release handles only a limited number of CCI datasets and operations :
-              the software is developed through an Agile methodology, releasing software early and frequently and
-              reacting flexibly and quickly to user needs.
-<br><br>
-              CCI Toolbox v1.0 provides the following CCI datasets - Aerosol CCI (x6), Cloud CCI (x6), Fire CCI (x1),
-              Ocean Colour CCI (x6),
-              Ozone CCI (x2),
-              Soil Moisture CCI (x2),
-              Sea Surface Temperature CCI (x1).
-            </p>
-          </div>
-          <div class="col-md-4">
-              <img alt="githubLogo" src="img/if_stack_1287510.png" width="230" />
           </div>
         </div>
       </div>
