--- a/index.html
+++ b/index.html
@@ -1081,15 +1081,18 @@
             <h2>Data in CCI Toolbox v1.0<br></h2>
             <p style="color:#F4B12A"></p>
             <p style="color:#FFCCCC">
-              The latest toolbox release handles only a limited number of CCI datasets and operations :
-              the software is developed through an Agile methodology, releasing software early and frequently and
-              reacting flexibly and quickly to user needs.
+              The latest toolbox release handles only a limited number of CCI <br>datasets and operations :
+              the software is developed through an <br>Agile methodology, releasing software
+              <text style="color:White;">early</text> and
+              <text style="color:White;">frequently</text>,
+              <br>reacting flexibly and quickly to user needs.
 <br><br>
-              CCI Toolbox v1.0 provides the following CCI datasets - Aerosol CCI (x6), Cloud CCI (x6), Fire CCI (x1),
-              Ocean Colour CCI (x6),
+              CCI Toolbox <text style="color:White;">v1.0</text> provides the following CCI datasets - <br>Aerosol CCI (x6),
+              Cloud CCI (x6), Fire CCI (x1),
+              Ocean Colour CCI (x6),<br>
               Ozone CCI (x2),
-              Soil Moisture CCI (x2),
-              Sea Surface Temperature CCI (x1).
+              Soil Moisture CCI (x2), and
+              Sea Surface <br>Temperature CCI (x1). More are on the way.
             </p>
           </div>
           <div class="col-md-4">
