--- a/index.html
+++ b/index.html
@@ -1074,7 +1074,7 @@
       </div>
     </section>
 
-    <section class="contact" id="documentation" style="color:#ffffff;background-color:#CB3E68">
+    <section class="contact" style="color:#ffffff;background-color:#CB3E68">
       <div class="container">
         <div class="row">
           <div class="col-md-8">
