italics to emphasise early and frequent software release

--- a/index.html
+++ b/index.html
@@ -1083,8 +1083,8 @@
             <p style="color:#FFCCCC">
               The latest toolbox release handles only a limited number of CCI <br>datasets and operations :
               the software is developed through an <br>Agile methodology, releasing software
-              <text style="color:White;">early</text> and
-              <text style="color:White;">frequently</text>,
+              <text style="color:White;font-style: italic;">early</text> and
+              <text style="color:White;font-style: italic;">frequently</text>,
               <br>reacting flexibly and quickly to user needs.
 <br><br>
               CCI Toolbox <text style="color:White;">v1.0</text> provides the following CCI datasets - <br>Aerosol CCI (x6),
