section heading tidying

--- a/index.html
+++ b/index.html
@@ -1078,7 +1078,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8">
-            <h2>Data in CCI Toolbox v1.0<br></h2>
+            <h2>CCI data sources in</br> CCI Toolbox v1.0<br></h2>
             <p style="color:#F4B12A"></p>
             <p style="color:#FFCCCC">
               The latest toolbox release handles only a limited number of CCI <br>datasets and operations :
